Fix dropdown overflow issue

--- a/src/property-filter/styles.scss
+++ b/src/property-filter/styles.scss
@@ -41,9 +41,6 @@
 .token-editor {
   user-select: text;
   margin: awsui.$space-xxs;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   &-form {
     margin-bottom: awsui.$space-scaled-l;
   }
@@ -67,6 +64,10 @@
     justify-content: flex-end;
     padding-top: awsui.$space-s;
     border-top: 1px solid #{awsui.$color-border-dropdown-item-default};
+  }
+}
+.token-editor {
+  &-actions {
     // The below code cancels horizontal padding of the popover and horizontal margin of the token-editor.
     padding-right: calc(#{awsui.$space-m} + #{awsui.$space-xxs});
     margin-left: calc(-1 * #{awsui.$space-m} + -1 * #{awsui.$space-xxs});
@@ -74,8 +75,7 @@
   }
 }
 .property-editor {
-  margin: awsui.$space-m;
-  overflow-x: hidden;
+  padding: awsui.$space-m;
   overflow-y: auto;
 }
 
